got it to dynamically change colors based on current time

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,10 @@ textarea {
   padding: 10px;
 }
 
+i {
+  font-size: xx-large;
+}
+
 .jumbotron {
   text-align: center;
   background-color: transparent;
@@ -43,18 +47,18 @@ textarea {
 }
 
 .past {
-  background-color: #d3d3d3;
-  color: white;
+  background-color: #df0d0d;
+  color: rgb(224, 222, 222);
 }
 
 .present {
-  background-color: #ff6961;
-  color: white;
+  background-color: #636363;
+  color: rgb(252, 252, 252);
 }
 
 .future {
   background-color: #77dd77;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 .saveBtn {
@@ -63,9 +67,12 @@ textarea {
   border-bottom-right-radius: 15px;
   background-color: #06aed5;
   color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .saveBtn i:hover {
-  font-size: 20px;
+  font-size: 40px;
   transition: all 0.3s ease-in-out;
 }
