--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ textarea {
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  height: 100%;
 }
 
 i {
@@ -47,18 +48,18 @@ i {
 }
 
 .past {
-  background-color: #df0d0d;
-  color: rgb(224, 222, 222);
+  background-color: #d3d3d3;
+  color: white;
 }
 
 .present {
-  background-color: #636363;
-  color: rgb(252, 252, 252);
+  background-color: #ff6961;
+  color: white;
 }
 
 .future {
   background-color: #77dd77;
-  color: rgb(0, 0, 0);
+  color: white;
 }
 
 .saveBtn {
@@ -70,6 +71,7 @@ i {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100%;
 }
 
 .saveBtn i:hover {
